<resources>
    <string name="app_name">CounterTest</string>
    <string name="editText">Guess a number (1-6)</string>
    <string name="rollButton">Roll Dice</string>
    <string name="dieNum">"The die landed on: "</string>
    <string name="numGuess">You guessed:</string>
    <string name="score">0</string>
    <string name="die">-</string>
    <string name="guess">-</string>
    <string name="winLoseTxt">-</string>
</resources>
